# Optogram

./: README.md  build.gradle  gradle.properties
.github/workflows/: generate-apk-debug.yml  generate-apk-release.yml
Gateways/Python/: main.py
Gateways/Rust/: Cargo.toml
Gateways/Rust/src/: main.rs
TMessagesProj/: build.gradle  proguard-rules.pro
TMessagesProj/config/debug/: AndroidManifest.xml
TMessagesProj/config/release/: AndroidManifest.xml  AndroidManifest_SDK23.xml  AndroidManifest_standalone.xml
TMessagesProj/jni/tgnet/: ConnectionSocket.cpp  Defines.h
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/main/res/drawable/: ic_launcher_foreground.xml  icon_3_background_sa.xml  icon_4_background_sa.xml  icon_5_background_sa.xml  icon_6_background_sa.xml  icon_background_sa.xml  tg_splash_320.xml
TMessagesProj/src/main/res/drawable-v24/: ic_launcher_background.xml
TMessagesProj/src/main/res/mipmap-anydpi-v26/: icon_2_launcher.xml  icon_2_launcher_round.xml  icon_3_launcher.xml  icon_3_launcher_round.xml  icon_4_launcher.xml  icon_4_launcher_round.xml  icon_5_launcher.xml  icon_5_launcher_round.xml  icon_6_foreground_sa.xml  icon_6_launcher.xml  icon_6_launcher_round.xml  icon_foreground_sa.xml
TMessagesProj/src/main/res/values-ar/: strings.xml  strings_mg.xml
TMessagesProj/src/main/res/values-az/: strings_mg.xml
TMessagesProj_App/: build.gradle
TMessagesProj_AppStandalone/: build.gradle
metadata/af/: name.txt
metadata/ar/: name.txt
metadata/da/: name.txt
metadata/de/: name.txt
metadata/zh-TW/: name.txt
(+111 files in other folders)
