[package]
name = "p2p-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
reqwest = { version = "0.11", features = ["stream"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
